[package]
edition = "2021"
name = "iridium"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
byteorder = "1.4.3"
chrono = "0.4.19"
clap = {version = "2.32", features = ["yaml"]}
env_logger = "0.9.0"
log = "0.4"
nom = "^4"
num_cpus = "1"
serde = "1.0.130"
serde_derive = "1.0.130"
uuid = {version = "0.8.2", features = ["v4"]}

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[[bin]]
name = "iridium"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
harness = false
name = "iridium"
